--- a/index.html
+++ b/index.html
@@ -1127,8 +1127,36 @@
         
         @media (max-width: 768px) {
             .header-container {
-                flex-direction: column;
-            }
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    gap: 12px;
+}
+
+/* Asegurar que las acciones del header queden a la derecha */
+.header-actions {
+    margin-left: auto !important;
+    display: flex !important;
+    align-items: center !important;
+    gap: 12px;
+}
+
+/* Evitar que el menú nav se muestre en móvil */
+nav ul { 
+    display: none !important; 
+}
+
+/* Ocultar carrito flotante en móvil (el que aparece abajo) */
+.floating-cart { 
+    display: none !important; 
+}
+
+/* Reposicionar botón WhatsApp para evitar estorbar el header */
+.whatsapp-button { 
+    left: auto !important; 
+    right: 18px !important; 
+}
+
             
             nav ul {
                 margin: 20px 0;
@@ -1344,8 +1372,8 @@ footer mark, footer .highlight, footer .tag-highlight {
 .dev-sign { font-size: 0.8rem; color: #666; text-align: center; margin-top: 12px; opacity: 0.9; }
 .dev-sign a { color: inherit; text-decoration: none; font-weight: 600; }
 .dev-badge { position: fixed; bottom: 12px; left: 12px; background: rgba(255,255,255,0.9); color:#222; padding:6px 10px; border-radius:10px; font-size:0.78rem; box-shadow: 0 6px 18px rgba(0,0,0,0.08); z-index:99999; }
-.nav-toggle { display:none; background:transparent; border:none; font-size:1.2rem; cursor:pointer; padding:8px; }
-@media (max-width: 768px) { .nav-toggle { display:block; } }
+.nav-toggle { display: none !important; }
+
    </style>
 <meta content="Castirales Floristería — Arreglos y ramos exclusivos: rosas, gerberas, cajas regalo, girasoles y arreglos especiales. Pedidos por WhatsApp con envío rápido." name="description"/>
 <meta content="flores, ramos, rosas, gerberas, cajas regalo, girasoles, flores a domicilio, arreglos florales, Castirales, pedidos WhatsApp" name="keywords"/>
@@ -1451,9 +1479,6 @@ footer mark, footer .highlight, footer .tag-highlight {
   </div>
 <header>
 <div class="container header-container">
-<button aria-label="Abrir menú" class="nav-toggle">
-     ☰
-    </button>
 <div class="logo">
 <img alt="Castirales Floristería Logo" class="logo-img" loading="lazy" src="/images/logo.png"/>
 <div class="logo-text">
