--- a/index.html
+++ b/index.html
@@ -3713,7 +3713,7 @@ botInput.addEventListener('keypress', function(e){
     width: 100%;
     height: 100%;
     pointer-events: none; /* permite interactuar con la web debajo */
-    z-index: 99998;       /* si necesitas subirlo, prueba 99999 */
+    z-index: 9999999;       /* si necesitas subirlo, prueba 99999 */
     mix-blend-mode: screen; /* hace la nieve más suave sobre fondos oscuros */
   }
   /* Reduce movimiento si el usuario prefiere animaciones reducidas */
